# status-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_webhook.py
app/: config.py  dedup.py  logger.py  main.py  models.py  poller.py  providers.py  subscriber.py
email-worker/: package.json  wrangler.toml
email-worker/src/: index.ts
tests/: conftest.py  test_dedup.py  test_poller.py  test_webhook.py
